修正生成器内容

--- a/02-JavaScript语法进阶/05.2-迭代器与生成器-Generator.md
+++ b/02-JavaScript语法进阶/05.2-迭代器与生成器-Generator.md
@@ -172,6 +172,102 @@ const wrapped = wrapper(function* () {
 console.log(wrapped().next('hi')) // { value: undefined, done: true }
 ```
 
+上面的代码中， Generator 函数如果不用 wrapper 先包一层，是无法在第一次调用 next 方法时就输入参数的。最后一个示例：
+
+```js
+function* dataConsumer() {
+  console.log('started')
+  console.log(`1. ${yield}`)
+  console.log(`2. ${yield}`)
+  return 'result'
+}
+
+let genObj = dataConsumer()
+genObj.next() // started
+genObj.next('a') // 1. a
+genObj.next('b') // 1. b
+```
+
+### 1.6 for..of 遍历迭代器对象
+
+for...of 循环可以自动遍历 Generator 函数生成的 Iterator 对象，且此时不再需要调用 next 方法：
+
+```js
+function* foo() {
+  yield l
+  yield 2
+  yield 3
+  yield 4
+  yield 5
+  return 6
+}
+for (let v of foo()) {
+  console.log(v) // 1 2 3 4 5
+}
+```
+
+利用 Generator 函数和 for...of 循环实现斐波那契数列：
+
+```js
+function* fibonacci() {
+  let [prev, curr] = [0, 1]
+  for (;;) {
+    ;[prev, curr] = [curr, prev + curr]
+    yield curr
+  }
+}
+
+for (let n of fibonacci()) {
+  if (n > 1000) {
+    break
+  }
+  console.log(n)
+}
+```
+
+原生的 JavaScript 对象没有遍历接口，无法直接使用 for...of 循环，通过 Generator 函数为它加上这个接口后就可以用了。有两种方案。
+
+方案一：
+
+```js
+function* objectEntries(obj) {
+  let propKeys = Reflect.ownKeys(obj)
+  for (let propKey of propKeys) {
+    yield [propKey, obj[propKey]]
+  }
+}
+
+let jane = { first: 'Jane', last: 'Doe' }
+for (let [key, value] of objectEntries(jane)) {
+  // first: Jane
+  // last: Doe
+  console.log(`${key}: ${value}`)
+}
+```
+
+方案二：将 Generator 函数加到对象的 Symbol . iterator 属性上
+
+```js
+function* objectEntries(obj) {
+  let propKeys = Object.keys(this)
+  for (let propKey of propKeys) {
+    yield [propKey, obj[propKey]]
+  }
+}
+
+let jane = { first: 'Jane', last: 'Doe' }
+
+jane[Symbol.iterator] = objectEntries
+
+for (let [key, value] of objectEntries(jane)) {
+  // first: Jane
+  // last: Doe
+  console.log(`${key}: ${value}`)
+}
+```
+
+贴士：除了 for ... of 循环 ，扩展运算符（．．．）、解构赋值和 Array.from 方法内部调用的都是迭代器接口。这意味着 ，它们都可以将 Generator 函数返回的 Iterator 对象作为参数。
+
 ## 二 生成器的使用
 
 ### 2.1 生成器对象作为可迭代对象
@@ -469,112 +565,427 @@ g.throw('foo')
 console.log(g.next()) // { done: false, value: 3}
 ```
 
-## 三 生成器的应用
+### 2.6 Generator.prototype.throw()
 
-### 3.1 生成器函数在异步中的应用
-
-见 异步编程章节
-
-### 3.2 使用 `yield*` 实现递归算法
-
-`yield*` 最有用的地方是实现递归操作，此时生成器可以产生自身：
+Generator 函数返回的遍历器对象都有一个 throw 方法，可以在函数外部抛出错误，然后在 Generator 函数体内捕获 。
 
 ```js
-function* nTimes(n) {
-  if (n > 0) {
-    yield* nTimes(n - 1)
-    yield n - 1
+const g = function* () {
+  try {
+    yield
+  } catch (e) {
+    console.log('捕获内部错误:', e)
   }
 }
-for (const x of nTimes(3)) {
-  console.log(x) // 0 1 2
+
+let i = g()
+i.next()
+
+try {
+  i.throw('a')
+  i.throw('b')
+} catch (e) {
+  console.log('捕获外部错误:', e)
+}
+
+// 内部捕获 a
+// 外部捕获 b
+```
+
+上面的代码中，遍历器对象 i 连续抛出两个错误 。 第一个错误被 Generator 函数体内的 catch 语句捕获 。 i 第二次抛出错误，由于 Generator 函数内部的 catch 语句已经执行过了，不会再捕捉到这个错误了，所以这个错误就被抛出了 Generator 函数体，被函数体外的 catch 语句捕获。
+
+throw 方法可以接受一个参数，该参数会被 catch 语句接收，建议抛出 Error 对象的实例：
+
+```js
+const g = function* () {
+  try {
+    yield
+  } catch (e) {
+    console.log(e)
+  }
+}
+
+let i = g()
+i.next()
+i.throw('出错嘞')
+
+// 出错嘞
+```
+
+贴士：不要混淆遍历器对象的 throw 方法和全局的 throw 命令 。上面的错误是用遥历器对象的 throw 方法抛出的，而不是用 throw 命令抛出的 。 后者只能被函数体外的 catch 语句捕获。
+
+如果 Generator 函数内部没有部署 try ... catch 代码块，那么 throw 方法抛出的错误将被外部 try ... catch 代码块捕获。
+
+```js
+const g = function* () {
+  while (true) {
+    yield
+    console.log('捕获内部错误:', e)
+  }
+}
+
+let i = g()
+i.next()
+try {
+  throw new Error('a')
+} catch (e) {
+  console.log('捕获外部错误:', e)
 }
 ```
 
-在这个例子中，每个生成器首先都会从新创建的生成器对象产出每个值，然后再产出一个整数。结果就是生成器函数会递归地减少计数器值，并实例化另一个生成器对象。从最顶层来看，这就相当于创建一个可迭代对象并返回递增的整数。
-
-使用递归生成器结构和 `yield*` 可以优雅地表达递归算法。下面是一个图的实现，用于生成一个随机的双向图：
+如果 Generator 函数内部部署了 try . . . catch 代码块，那么遍历器的 throw 方法抛出的错误不影响下一次遍历，否则遍历直接终止。
 
 ```js
-class Node {
-  constructor(id) {
-    this.id = id
-    this.neighbors = new Set()
-  }
-  connect(node) {
-    if (node !== this) {
-      this.neighbors.add(node)
-      node.neighbors.add(this)
-    }
-  }
+const gen = function* () {
+  yield console.log('hello')
+  yield console.log('world')
 }
 
-class RandomGraph {
-  constructor(size) {
-    this.nodes = new Set()
-    // 创建节点
-    for (let i = 0; i < size; ++i) {
-      this.nodes.add(new Node(i))
-    }
-    // 随机连接节点
-    const threshold = 1 / size
-    for (const x of this.nodes) {
-      for (const y of this.nodes) {
-        if (Math.random() < threshold) {
-          x.connect(y)
-        }
-      }
-    }
-  }
-  // 这个方法仅用于调试
-  print() {
-    for (const node of this.nodes) {
-      const ids = [...node.neighbors].map((n) => n.id).join(',')
-      console.log(`${node.id}: ${ids}`)
-    }
-  }
-}
-
-const g = new RandomGraph(6)
-g.print()
+let g = gen()
+g.next()
+g.throw()
 ```
 
-图数据结构非常适合递归遍历，而递归生成器恰好非常合用。为此，生成器函数必须接收一个可迭代对象，产出该对象中的每一个值，并且对每个值进行递归。这个实现可以用来测试某个图是否连通，即是否没有不可到达的节点。只要从一个节点开始，然后尽力访问每个节点就可以了。结果就得到了一个非常简洁的深度优先遍历：
+上面的代码中， g.throw 抛出错误以后，没有任何 try ... catch 代码块可以捕获这个错误，导致程序报错，中断执行 。
+
+throw 方法被捕获以后会附带执行下一条 yield 表达式，即附带执行一次 next 方法：
 
 ```js
-class Node {
-  constructor(id) {
-    // ...
-  }
-  connect(node) {
-    // ...
-  }
+const gen = function* () {
+  try {
+    yield console.log('a')
+  } catch (e) {}
+  yield console.log('b')
+  yield console.log('c')
 }
 
-class RandomGraph {
-  constructor(size) {
-    // ...
+let g = gen()
+g.next() // a
+g.throw() // b
+g.next() // c
+```
+
+上面的代码中， g .th row 方法被捕获以后会自动执行一次 next 方法，所以打印 b 。 另外，也可以看到，只要 Generator 函数内部部署了 try ... catch 代码块，那么遍历器的 throw 方法抛出的错误便不会影响下一次遍历 。
+
+另外， throw 命令与 g . throw 方法是无关的，两者互不影响：
+
+```js
+const gen = function* () {
+  yield console.log('hello')
+  yield console.log('world')
+}
+
+let g = gen()
+g.next()
+
+try {
+  throw new Error()
+} catch (e) {
+  g.next()
+}
+```
+
+上面的代码中， throw 命令抛出的错误不会影响到遍历器的状态，所以两次执行 next 方法都完成了正确的操作。
+
+这种函数体内捕获错误的机制大大方便了对错误的处理。对于多个 yield 表达式，可以只用 一个 try . . . catch 代码块来捕获错误。如果使用回调函数的写法想要捕获多个错误，就不得不每个函数写 ← 个错误处理语句，而现在只在 Generator 函数内部写一次 catch 语句就可以了。
+
+Generator 函数体外抛出的错误可以在函数体内捕获：反过来， Generator 函数体内抛出的错误也可以被函数体外的 catch 捕获。
+
+```js
+function* foo() {
+  let x = yield 3
+  let y = x.toUpperCase()
+  yield y
+}
+
+let it = foo()
+
+it.next() // {value: 3, done: false}
+
+try {
+  it.next(42)
+} catch (e) {
+  console.log(e)
+}
+```
+
+上面的代码中，第二个口 ext 方法向函数体内传入一个参数 42 ，数值是没有 toUpperCase 方法的，所以会抛出一个 TypeError 错误，被函数体外的 catch 捕获 。
+
+一旦 Generator 执行过程中抛出错误，就不会再执行下去了 。 如果此后还调用 next 方法，将返回一个 value 属性等于 undefined 、 done 属性等于 true 的对象，即 JavaScript 引擎认为这个 Generator 己经运行结束。
+
+### 2.7 Generator.prototype.return()
+
+return 方法，可以返回给定的值，并终结 Generator 函数的遍历。
+
+```js
+function* gen() {
+  yield 1
+  yield 2
+  yield 3
+}
+
+let g = gen()
+
+g.next()
+g.return('foo')
+g.next()
+```
+
+上面的代码中，遍历器对象 q 调用 return 方法后，返回值的 value 属性就是 return 方法的参数 foo 。同时， Generator 函数的遍历终止，返回值的 done 属性为 true ，以后再调用 next 方法， done 属性总是返回 true 。
+
+如果 return 方法调用时不提供参数，则返回值的 vaule 属性为 undefined 。
+
+```js
+function* gen() {
+  yield 1
+  yield 2
+  yield 3
+}
+
+let g = gen()
+
+g.next()
+g.return()
+```
+
+如果 Generator 函数内部有 try . .. finally 代码块，那么 return 方法会推迟到 finally 代码块执行完再执行。
+
+```js
+function* numbers() {
+  yield 1
+  try {
+    yield 2
+    yield 3
+  } finally {
+    yield 4
+    yield 5
   }
-  print() {
-    // ...
+  yield 6
+}
+
+let g = numbers()
+g.next()
+g.next()
+g.return(7)
+g.next()
+g.next()
+```
+
+上面的代码中，调用 return 方法后就开始执行 finally 代码块，然后等到 finally 代码块执行完再执行 return 方法。
+
+### 2.8 yield＊表达式
+
+如果在 Generator 函数内部调用另一个 Generator 函数，默认情况下是没有效果的：
+
+```js
+function* foo() {
+  yield 'a'
+  yield 'b'
+}
+
+function* bar() {
+  yield 'x'
+  foo()
+  yield 'y'
+}
+
+for (let v of bar()) {
+  console.log(v)
+}
+```
+
+上面的代码中， foo 和 bar 都是 Generator 函数 ， 在 bar 里面调用 foo 是不会有效果的。这时就需要用到 yield＊语句，用来在一个 Generator 函数里面执行另 一个 Generator 函数。
+
+```js
+function* bar() {
+  yield 'x'
+  yield* foo()
+  yield 'y'
+}
+
+// 等同于
+// function* bar() {
+//     yield 'x'
+//     yield 'a'
+//     yield 'b'
+//     yield 'y'
+// }
+
+// 等同于
+// function* bar() {
+//     yield 'x'
+//     for(let v of foo()){
+//         yield v
+//     }
+//     yield 'y'
+// }
+```
+
+从语法角度看，如果 yield 命令后面跟的是一个遍历器对象，那么需要在 yield 命令后面加上星号，表明返回的是一个遍历器对象。这被称为 yield 叫吾句。
+
+```js
+let deletgatedIterator = (function* () {
+  yield 'hello'
+  yield 'bye'
+})()
+
+let delegatingIterator = (function* () {
+  yield 'greetings'
+  yield* deletgatedIterator
+  yield 'ok, bye'
+})()
+
+for (let value of delegatingIterator) {
+  console.log(value)
+}
+```
+
+上面的代码中， delegatingiterator 是代理者， delegatediterator 是被代理者 。由于 yield\* delegatediterator 语句得到的值是一个遍历器，所以要用星号表示。运行结果就是使用一个遍历器遍历了多个 Generator 函数，有递归的效果 。
+
+yield ＊后面的 Generator 函数（没有 return 语句时）等同于在 Generator 函数内部部署一个 for...of 循环。
+
+```js
+function* concat(iter1, iter2) {
+  yield* iter1
+  yield* iter2
+}
+
+// 等同于
+function* concat(iter1, iter2) {
+  for (let value of iter1) {
+    yield value
   }
-  isConnected() {
-    const visitedNodes = new Set()
-    function* traverse(nodes) {
-      for (const node of nodes) {
-        if (!visitedNodes.has(node)) {
-          yield node
-          yield* traverse(node.neighbors)
-        }
-      }
-    }
-    // 取得集合中的第一个节点
-    const firstNode = this.nodes[Symbol.iterator]().next().value
-    // 使用递归生成器迭代每个节点
-    for (const node of traverse([firstNode])) {
-      visitedNodes.add(node)
-    }
-    return visitedNodes.size === this.nodes.size
+
+  for (let value of iter2) {
+    yield value
   }
 }
 ```
+
+上面的代码说明， yield 食后面的 Generator 函数（没有 return i 吾句时）不过是 f or ... of 的一种简写形式，完全可以用后者替代。反之，在有 return i 吾句时则需要用 `var value = yield` iterator 的形式获取 return 语句的值。
+
+如果 yield＊后面跟着一个数组，由于数组原生支持遍历器，因此就会遍历数组成员 。
+
+```js
+function* gen() {
+  yield* ['a','b','c'];
+}
+
+gen() . next () / / { value :”a ”, done:false }
+```
+
+上面的代码中， yield 命令后面如果不加星号，返回的是整个数组，加了 星号就表示返回的是数组的遍历器对象。
+
+实际上，任何数据结构只要有 Iterator 接口，就可以被 yield＊遍历 。
+
+```js
+let read = (function* () {
+  yield 'hello'
+  yield* 'hello'
+})()
+
+read.next().value // ” hello ”
+read.next().value // ” h ”
+```
+
+上面的代码中 ， y i eld 语句返回整个字符串 ， yield＊语句返回单个字符。因为字符串具有 Iterator 接口，所以用 yi eld＊遍历。
+
+如果被代理的 Generator 函数有 return 语句，那么便可以向代理它的 Generator 函数返回数据。
+
+```js
+function* foo() {
+  yield 2
+  yield 3
+  return 'foo'
+}
+
+function* bar() {
+  yield 1
+  let v = yield* foo()
+  console.log('v: ', v)
+  yield 4
+}
+
+let it = bar()
+
+it.next()
+it.next()
+it.next()
+it.next()
+it.next()
+```
+
+在上面的代码第四次调用 next 方法时，屏幕上会有输出 ， 这是因为函数 foo 的 return 语句向函数 bar 提供了返回值 。
+
+```js
+function* genFuncWithReturn() {
+  yield 'a'
+  yield 'b'
+  return 'The result'
+}
+function* logReturned(genObj) {
+  let result = yield* genObj
+  console.log(result)
+}
+;[...logReturned(genFuncWithReturn())]
+```
+
+上面的代码中 ， 存在两次遍历。第一次是扩展运算符遍历函数 logReturned 返回的遍历器对象 ， 第二次是 yield＊ 语句遍历函数 genFuncWithReturn 返回的遍历器对象 。 这两次遍历的效果是叠加的，最终表现为扩展运算符遍历函数 genFuncWithReturn 返回的遍历器对象 。 所以，最后的数据表达式得到的值等于［ 'a'，'b' ］。 但是，函数 genFuncWithReturn 的 return 语句的返回值 The result 会返回给函数 logReturned 内部的 result 变量 ，因此会有终端输出 。
+
+yield \*命令可以很方便地取出嵌套数组的所有成员 。
+
+```js
+function* iterTree(tree) {
+  if (Array.isArray(tree)) {
+    for (let i = 0; i < tree.length; i++) {
+      yield* iterTree(tree[i])
+    }
+  } else {
+    yield tree
+  }
+}
+
+const tree = ['a', ['b', 'c'], ['d', 'e']]
+
+for (let x of iterTree(tree)) {
+  console.log(x)
+}
+```
+
+### 2.9 作为对象属性的 Generator 函数
+
+如果一个对象的属性是 Generator 函数，那么可以简写成下面的形式：
+
+```js
+let obj = {
+  *fn() {},
+}
+```
+
+### 2.10 Generator 函数 this
+
+Generator 函数总是返回 一个遍历器 ， ES6 规定这个遍历器是 G enerator 函数的实例 ，它也继承了 Generator 函数的 prototype 对象上的方法。
+
+```js
+function* g() {}
+g.prototype.hello = function () {
+  return 'hi'
+}
+
+let obj = g()
+obj instanceof g // true
+obj.hello() // hi
+```
+
+上面的代码表明， Generator 函数 q 返回的遍历器 obj 是 q 的实例，而且继承了 g.prototype 。但是，如果把 q 当作普通的构造函数，则并不会生效，因为 q 返回的总是遍历器对象，而不是 this 对象。
+
+```js
+function* g() {
+  this.a = 11
+}
+
+let obj = g()
+// obj.a // undefined
+```
+
+Generator 函数使用 new 命令创建实例！
