优化异步编程章节

--- a/02-JavaScript语法进阶/06.5-异步编程-async与await.md
+++ b/02-JavaScript语法进阶/06.5-异步编程-async与await.md
@@ -45,7 +45,7 @@ async function show(params) {
 show() // 阶段一  阶段二  阶段三
 ```
 
-上面的写法已经符合正常人的顺序思维了，不过要理解的是：async/await 不过是语法糖，并未真正将异步代码同步化！
+上面的写法已经符合正常人的顺序思维了，不过要理解的是：async/await 不过是 Generator 的语法糖，并未真正将异步代码同步化！
 
 ### 1.1 async 关键字
 
@@ -588,3 +588,58 @@ foo()
 ```
 
 这时栈追踪信息就准确地反映了当前的调用栈。fooPromiseExecutor() 已经返回，所以它不在错误信息中。但 foo() 此时被挂起了，并没有退出。JavaScript 运行时可以简单地在嵌套函数中存储指向包含函数的指针，就跟对待同步函数调用栈一样。这个指针实际上存储在内存中，可用于在出错时生成栈追踪信息。这样就不会像之前的例子那样带来额外的消耗，因此在重视性能的应用中是可以优先考虑的。
+
+## 五 async 原理
+
+as 严 lC 函数的实现原理就是将 Generator 函数和自动执行器包装在一个函数里。
+
+```js
+async function fn(args) {
+  // ...
+}
+
+// 等同于
+
+function fn(args) {
+  return spawn(function* () {
+    //
+  })
+}
+```
+
+所有的 async 函数都可以写成上面的第二种形式，其中的 spawn 函数就是自动执行器 。
+
+```js
+function spawn(genF) {
+  return new Promise(function (resolve, reject) {
+    let gen = genF()
+    function step(nextF) {
+      try {
+        let next = nextF()
+      } catch (e) {
+        return reject(e)
+      }
+
+      if (next.done) {
+        return resolve(next.value)
+      }
+
+      Promise.resolve(next.value).then(
+        function (v) {
+          step(function () {
+            return gen.next(v)
+          })
+        },
+        function (e) {
+          step(function () {
+            return gen.throw(e)
+          })
+        }
+      )
+    }
+    step(function () {
+      return gen.next(undefined)
+    })
+  })
+}
+```
