--- a/02-JavaScript语法进阶/06.6-异步编程-异步迭代.md
+++ b/02-JavaScript语法进阶/06.6-异步编程-异步迭代.md
@@ -1,6 +1,6 @@
 # 06.6-异步编程-异步迭代
 
-## 一 使用异步迭代器
+## 一 异步迭代器 与 for-await-of
 
 同步迭代器在每次调用 next() 时都会返回{ value, done }对象。当然，这要求确定这个对象内容的计算和资源获取在 next() 调用退出时必须完成，否则这些值就无法确定。在使用同步迭代器迭代异步确定的值时，主执行线程会被阻塞，以等待异步操作完成。
 
