css抖动优化方案

--- a/12-前端之禅/03.2-性能优化-代码优化示例.md
+++ b/12-前端之禅/03.2-性能优化-代码优化示例.md
@@ -287,13 +287,76 @@ js 引入问题：
 - 方案一：html 中使用完整的 img 标签（JS 生成的 img 标签也可以），只需要将其隐藏即可，当需要展示时显示
 - 方案二：使用 xhr 请求
 
-### 3.3 重排与重绘
+## 四 重排与重绘
+
+### 4.1 重排重绘与布局抖动
 
 重排：页面元素的位置、形状发生了改变时就会触发，也称为回流（reflow）。
 
 重绘：重排后的内容显示出来的过程叫做重绘。
 
+因为重新计算布局十分昂贵， 浏览器尽可能得少、 尽可能延缓布局的工作。 他们尝试在队列中批处理 DOM 上尽可能多的写入操作， 以便一次性执行这些操作。 然后， 当需要最新布局的操作时， 浏览器勉强服从， 并执行所有批量操作， 最后更新布局。 但有时候， 我们编写代码的方式并不能让浏览器有足够的空间来执行这些优化， 我们强制浏览器执行大量（可能不需要的） 的重新计算。 这就是造成布局抖动的元凶。 当我们的代码对 DOM 进行一系列（通常是不必要的） 连续的读取和写入时， 浏览器就无法优化布局操作。 核心问题在于， 每当我们修改 DOM 时， 浏览器必须在读取任何布局信息之前先重新计算布局。 这种对性能的损耗十分巨大。
+
+```html
+<div id="ninja">I’m a ninja</div>
+<div id="samurai">I’m a samurai</div>
+<div id="ronin">I’m a ronin</div>
+<script>
+  const ninja = document.getElementById('ninja')
+  const samurai = document.getElementById('samurai')
+  const ronin = document.getElementById('ronin')
+  const ninjaWidth = ninja.clientWidth
+  ninja.style.width = ninjaWidth / 2 + 'px'
+  const samuraiWidth = samurai.clientWidth
+  samurai.style.width = samuraiWidth / 2 + 'px'
+  const roninWidth = ronin.clientWidth
+  ronin.style.width = roninWidth / 2 + 'px'
+</script>
+```
+
+通过对不同元素的 width 属性执行连续读写操作， 浏览器便无法智能地执行惰性计算。 相反， 由于我们在每次布局修改后都会阅读布局信息， 所以每次浏览器都必须重新计算布局， 以确保我们一直都能获得正确的信息。
+
 注意：改变背景颜色不会触发重排，只会触发重绘，重排与重绘都会影响性能。
+
+引起抖动的常见操作：
+
+```txt
+Element：
+    clientHeight, clientLeft, clientTop, clientWidth, focus,getBoundingClientRect, getClientRects, innerText,
+    offsetHeight,offsetLeft, offsetParent, offsetTop, offsetWidth, outerText,scrollByLines, scrollByPages, scrollHeight, scrollIntoView,scrollIntoViewIfNeeded, scrollLeft, scrollTop, scrollWidth
+
+MouseEvent：
+    layerX, layerY, offsetX, offsetY
+
+Window：
+    getComputedStyle, scrollBy, scrollTo, scroll, scrollY
+
+Frame, Document,Image：
+    height, width
+```
+
+### 4.2 批量写入
+
+避免布局抖动的一种方法， 就是使用不会导致浏览器重排的方式编写代码。如下所示批量 DOM 读取和写入方式以抖动：
+
+```html
+<div id="ninja">I’m a ninja</div>
+<div id="samurai">I’m a samurai</div>
+<div id="ronin">I’m a ronin</div>
+<script>
+  const ninja = document.getElementById('ninja')
+  const samurai = document.getElementById('samurai')
+  const ronin = document.getElementById('ronin')
+  const ninjaWidth = ninja.clientWidth
+  const samuraiWidth = samurai.clientWidth
+  const roninWidth = ronin.clientWidth // 批量读取所有的布局属性
+  ninja.style.width = ninjaWidth / 2 + 'px'
+  samurai.style.width = samuraiWidth / 2 + 'px'
+  ronin.style.width = roninWidth / 2 + 'px' // 批次写入所有的布局属性
+</script>
+```
+
+### 4.3 常规优化措施
 
 优化措施：尽量在 appendChild 前添加重排、重操作。
 
@@ -316,3 +379,7 @@ for (var i = 0; i < 5000; i++) {
 }
 console.timeEnd('hi') //440ms
 ```
+
+### 4.4 虚拟 DOM 下的抖动
+
+React 使用虚拟 DOM 和一组 JavaScript 对象， 通过模拟实际 DOM 来实现极佳的性能。 当我们在 React 中开发应用程序时， 是对虚拟 DOM 执行所有修改， 而不考虑布局抖动。 然后， 在恰当的时候， React 会使用虚拟 DOM 来判断对实际 DOM 需要做什么改变， 以保证 UI 同步。 这种利用虚拟 DOM 的批处理方式， 可以进一步减少抖动的产生。
