--- a/附录-HTML与CSS/04.3-布局技术-弹性布局.md
+++ b/附录-HTML与CSS/04.3-布局技术-弹性布局.md
@@ -371,9 +371,17 @@ flex-wrap: nowrap;
 */
 ```
 
-### 4.3 justify-content
+### 4.3 flex-flow
 
-设置主轴的子元素排列方式：
+复合属性：相当于同时设置了 flex-direction 和 flex-wrap
+
+```css
+flex-flow: row nowrap;
+```
+
+### 4.4justify-content
+
+设置主轴（默认水平方向）的子元素排列方式：
 
 ```css
 justify-content: flex-start;
@@ -387,17 +395,9 @@ justify-content: flex-start;
 */
 ```
 
-### 4.4 flex-flow
-
-复合属性：相当于同时设置了 flex-direction 和 flex-wrap
-
-```css
-flex-flow: row nowrap;
-```
-
 ### 4.5 align-items
 
-**单行时**，设置侧轴上的子元素排列方式：
+设置侧轴（默认垂直方向）的子元素排列方式：
 
 ```css
 align-items: flex-start;
@@ -430,33 +430,9 @@ align-content: stretch;
 
 ## 五 子元素常见属性
 
-### 5.1 align-self
+### 5.1 flex-grow
 
-控制子项在侧轴上的排列方式：
-
-```css
-align-self: auto;
-/*
-  auto：默认值为。表示继承父元素的 align-items 属性，如果没有父元素，则等同于 stretch
-
-  该属性允许某一单个子项与其他子项对齐方式不同，可以覆盖 align-items
-*/
-```
-
-### 5.2 order
-
-定义子项的前后顺序，数值越小越靠前：
-
-```css
-order: 0;
-/*
-  0：默认值
-*/
-```
-
-### 4.3 flex-grow
-
-扩展子元素宽度：
+放大子元素宽度：
 
 ```css
 flex-grow: 0;
@@ -468,9 +444,13 @@ flex-grow: 0;
 */
 ```
 
-### 5.3 flex-shrink
+比如 ul 中有 3 个 li，第二个 li 设置了 `flex-grow:2`，其他 li 设置了 `flex-grow:1`，那么界面上 3 个 li 先占据自己的位置，接着剩下了 100px 宽度，那么接着按顺序增加剩余空间的值为：：`1/4 * 150 ， 2/4* 150 ， 1/4* 150`。
 
-容器空间不足时，元素的收缩比例：
+贴士：如果 flex-grow 取值为小数，所有子项的 flex-grow 的值加起来小于 1，则分配方式为：`0.1 * 150 / 1， 0.2 * 150 / 1 ，0.1 * 150 / 1`，结果发现不能占据全部的 150px。
+
+### 5.2 flex-shrink
+
+收缩子元素比例（容器空间不足时，自动缩小）：
 
 ```css
 flex-shrink: 1;
@@ -482,23 +462,112 @@ flex-shrink: 1;
 */
 ```
 
-### 5.4 flex-basis
+假设容器宽度为 600，3 个子项宽度为 100，300，500，则溢出了 300px，而 3 个子项的 flex-shrink 分别为 1,3,2，那么计算方式为：
 
-指定 flex 元素在主轴方向上的长度：
+```txt
+计算溢出宽度：
+100 + 300 + 500 - 600 = 300
+
+计算实际大小需要总宽度：
+100 * 1 + 300 * 3 + 500 * 2 = 2000
+
+计算flex-shrink后缩小比例：
+100 * 1 / 2000 = 0.05
+300 * 3 / 2000 = 0.45
+500 * 2 / 2000 = 0.5
+
+子项目flex-shrink后实际需要缩小的宽度：
+100 * 0.05 = 5
+300 * 0.45 = 135
+500 * 0.5 = 250
+
+最终实际宽度
+100 - 5 = 95
+300 - 135 = 165
+500 - 250 = 250
+```
+
+贴士：如果 flex-shrink 设置为小数，则不会完全收缩：
+
+```txt
+计算溢出宽度：
+100 + 300 + 500 - 600 = 300
+
+计算实际大小需要总宽度：
+100 * 1 + 300 * 3 + 500 * 2 = 2000
+
+计算flex-shrink后缩小比例：
+100 * 1 / 2000 = 0.05
+300 * 3 / 2000 = 0.45
+500 * 2 / 2000 = 0.5
+
+子项目flex-shrink后实际需要缩小的宽度：
+300 * (0.1 + 0.2 + 0.3) = 180 (小数位flex-shrink值)
+180 * 0.05 = 9
+180 * 0.45 = 81
+180 * 0.5 = 90
+
+最终实际宽度
+100 - 9 = 91
+300 - 81 = 219
+500 - 90= 410
+```
+
+### 5.3 flex-basis
+
+在分配多余空间之前，项目占据的主轴空间：
 
 ```css
 flex-basis: auto;
 /**
-  auto：默认值。
+  auto：默认值，即使用子元素本身大小
   0：最小空间，相当于没有宽度，当有内容时会有最小宽度，内容换行显示。
   可设置任意像素大小，作用是用来修改在主轴上的长度！比如主轴是x轴时，则修改其宽度，主轴是y轴时，则修改其高度
   注意：值也可以是百分比
 */
 ```
 
-### 5.5 flex
+类似 width，示例：
 
-flex 是定义子项目分配剩余空间的份数，是 `flex-grow`，`flex-shrink`，`flex-basis` 的缩写：
+```html
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+  }
+  ul {
+    display: flex;
+    width: 1000px;
+    height: 500px;
+    list-style: none;
+    border: 1px solid red;
+  }
+
+  ul li {
+    width: 300px;
+    height: 100px;
+    background-color: burlywood;
+    flex-grow: 1;
+  }
+  .item {
+    flex-basis: 100px;
+    background-color: cadetblue;
+  }
+</style>
+
+<ul>
+  <li>22</li>
+  <li class="item">33</li>
+  <li>44</li>
+  <li>55</li>
+</ul>
+```
+
+贴士：flex-basis 优先级比 width 更高！
+
+### 5.4 flex
+
+flex 是 `flex-grow`，`flex-shrink`，`flex-basis` 的缩写，用来定义子项目分配剩余空间的份数：
 
 ```css
 flex: 0;
@@ -507,5 +576,31 @@ flex: 0;
   1：表示剩余空间被分为 1 份，即  flex-grow:1; flex-shrink:1; flex-basis:0%;
   auto：即  flex-grow:1; flex-shrink:1; flex-basis:auto;
   也支持直接属性连写：flex: 1 0 50%;
+*/
+```
+
+贴士：flex 可以直接设为百分比，与 flex 为 1 有些许区别，主要在需要换行时，flex 为 1 可能无法换行~
+
+### 5.5 align-self
+
+允许某个，或者多个子项在侧轴上有自己的独立的排序方式：
+
+```css
+align-self: auto;
+/*
+  auto：默认值为。表示继承父元素的 align-items 属性，如果没有父元素，则等同于 stretch
+
+  该属性允许某一单个子项与其他子项对齐方式不同，可以覆盖 align-items
+*/
+```
+
+### 5.6 order
+
+定义子项的前后顺序，数值越小越靠前：
+
+```css
+order: 0;
+/*
+  0：默认值
 */
 ```
