--- a/02-JavaScript语法进阶/05.5-迭代器与生成器-Generator应用.md
+++ b/02-JavaScript语法进阶/05.5-迭代器与生成器-Generator应用.md
@@ -1,8 +1,224 @@
-# 05.3-迭代器与生成器-Generator 应用
+# 05.5-迭代器与生成器-Generator 应用
 
-## 一 Generator 与状态机
+## 一 生成与迭代的应用
 
-Gene rator 是实现状态机的最佳结构 。 比如，下面的 clock 函数就是一个状态机：
+### 1.1 生成器对象作为可迭代对象
+
+在生成器对象上显式调用 next()方法的用处并不大。其实，如果把生成器对象当成可迭代对象，那么使用起来会更方便：
+
+```js
+function* generatorFn() {
+  yield 1
+  yield 2
+  yield 3
+}
+
+for (const x of generatorFn()) {
+  console.log(x) // 1 2 3
+}
+```
+
+在需要自定义迭代对象时，这样使用生成器对象会特别有用。比如，我们需要定义一个可迭代对象，而它会产生一个迭代器，这个迭代器会执行指定的次数。使用生成器，可以通过一个简单的循环来实现：
+
+```js
+function* nTimes(n) {
+  while (n--) {
+    yield
+  }
+}
+
+for (let _ of nTimes(3)) {
+  console.log('foo')
+}
+```
+
+### 1.2 使用 yield 实现输入和输出
+
+除了可以作为函数的中间返回语句使用， yield 关键字还可以作为函数的中间参数使用。上一次让生成器函数暂停的 yield 关键字会接收到传给 next()方法的第一个值。这里有个地方不太好理解——第一次调用 next()传入的值不会被使用，因为这一次调用是为了开始执行生成器函数：
+
+```js
+function* generatorFn(initial) {
+  console.log(initial)
+  console.log(yield)
+  console.log(yield)
+}
+
+let generatorObject = generatorFn('foo')
+generatorObject.next('bar') // foo
+generatorObject.next('baz') // baz
+generatorObject.next('qux') // qux
+```
+
+yield 关键字可以同时用于输入和输出，如下例所示：
+
+```js
+function* generatorFn() {
+  return yield 'foo'
+}
+let generatorObject = generatorFn()
+console.log(generatorObject.next()) // { done: false, value: 'foo' }
+console.log(generatorObject.next('bar')) // { done: true, value: 'bar' }
+```
+
+因为函数必须对整个表达式求值才能确定要返回的值，所以它在遇到 yield 关键字时暂停执行并计算出要产生的值： "foo"。下一次调用 next()传入"bar"，作为交给同一个 yield 的值。然后这个值被确定为本次生成器函数要返回的值。yield 关键字并非只能使用一次。比如，以下代码就定义了一个无穷计数生成器函数：
+
+```js
+function* generatorFn() {
+  for (let i = 0; ; ++i) {
+    yield i
+  }
+}
+
+let generatorObject = generatorFn()
+console.log(generatorObject.next().value) // 0
+console.log(generatorObject.next().value) // 1
+console.log(generatorObject.next().value) // 2
+console.log(generatorObject.next().value) // 3
+console.log(generatorObject.next().value) // 4
+console.log(generatorObject.next().value) // 5
+// ...
+```
+
+假设我们想定义一个生成器函数，它会根据配置的值迭代相应次数并产生迭代的索引。初始化一个新数组可以实现这个需求，但不用数组也可以实现同样的行为：
+
+```js
+function* nTimes(n) {
+  for (let i = 0; i < n; ++i) {
+    yield i
+  }
+}
+for (let x of nTimes(3)) {
+  console.log(x)
+}
+```
+
+另外，使用 while 循环也可以，而且代码稍微简洁一点：
+
+```js
+function* nTimes(n) {
+  let i = 0
+  while (n--) {
+    yield i++
+  }
+}
+for (let x of nTimes(3)) {
+  console.log(x) // 0 1 2
+}
+```
+
+这样使用生成器也可以实现范围和填充数组：
+
+```js
+function* range(start, end) {
+  while (end > start) {
+    yield start++
+  }
+}
+for (const x of range(4, 7)) {
+  console.log(x) // 4 5 6
+}
+
+function* zeroes(n) {
+  while (n--) {
+    yield 0
+  }
+}
+console.log(Array.from(zeroes(8))) // [0, 0, 0, 0, 0, 0, 0, 0]
+```
+
+### 1.3 产生可迭代对象
+
+可以使用星号增强 yield 的行为，让它能够迭代一个可迭代对象，从而一次产出一个值：
+
+```js
+// 等价的 generatorFn：
+// function* generatorFn() {
+//  for (const x of [1, 2, 3]) {
+//    yield x;
+//  }
+// }
+function* generatorFn() {
+  yield* [1, 2, 3]
+}
+let generatorObject = generatorFn()
+for (const x of generatorFn()) {
+  console.log(x) // 1 2 3
+}
+```
+
+贴士：yield 星号两侧的空格不影响其行为。
+
+因为 `yield*` 实际上只是将一个可迭代对象序列化为一连串可以单独产出的值，所以这跟把 yield 放到一个循环里没什么不同。下面两个生成器函数的行为是等价的：
+
+```js
+function* generatorFnA() {
+  for (const x of [1, 2, 3]) {
+    yield x
+  }
+}
+for (const x of generatorFnA()) {
+  console.log(x) // 1 2 3
+}
+
+function* generatorFnB() {
+  yield* [1, 2, 3]
+}
+for (const x of generatorFnB()) {
+  console.log(x) // 1 2 3
+}
+```
+
+`yield*` 的值是关联迭代器返回 done: true 时的 value 属性。对于普通迭代器来说，这个值是 undefined：
+
+```js
+function* generatorFn() {
+  console.log('iter value:', yield* [1, 2, 3])
+}
+for (const x of generatorFn()) {
+  console.log('value:', x) // value: 1  value: 2  value: 3  iter value: undefined
+}
+```
+
+对于生成器函数产生的迭代器来说，这个值就是生成器函数返回的值：
+
+```js
+function* innerGeneratorFn() {
+  yield 'foo'
+  return 'bar'
+}
+function* outerGeneratorFn(genObj) {
+  console.log('iter value:', yield* innerGeneratorFn())
+}
+for (const x of outerGeneratorFn()) {
+  console.log('value:', x) // value: foo iter value: bar
+}
+```
+
+### 1.4 生成器作为默认迭代器
+
+因为生成器对象实现了 Iterable 接口，而且生成器函数和默认迭代器被调用之后都产生迭代器，所以生成器格外适合作为默认迭代器。下面是一个简单的例子，这个类的默认迭代器可以用一行代码产出类的内容：
+
+```js
+class Foo {
+  constructor() {
+    this.values = [1, 2, 3]
+  }
+
+  *[Symbol.iterator]() {
+    yield* this.values
+  }
+}
+
+// for-of 循环调用了默认迭代器（它恰好又是一个生成器函数）并产生了一个生成器对象。这个生成器对象是可迭代的，所以完全可以在迭代中使用。
+const f = new Foo()
+for (const x of f) {
+  console.log(x) // 1 2 3
+}
+```
+
+## 二 Generator 与状态机
+
+Generator 是实现状态机的最佳结构。 比如，下面的 clock 函数就是一个状态机：
 
 ```js
 let ticking = true
@@ -32,7 +248,7 @@ let clock = function* () {
 
 对比上面的 Generator 实现与 ES5 实现，可以看到少了用来保存状态的外部变量 ticking,这样就更简洁，更安全（状态不会被非法篡改），更符合函数式编程的思想，在写法上也更优雅 。Generator 之所以可以不用外部变量保存状态，是因为它本身就包含了 一个状态信息，即目前是否处于暂停态。
 
-## 二 Generator 与协程
+## 三 Generator 与协程
 
 协程（ coroutine ）是一种程序运行的方式，可以理解成“协作的线程”或“协作的函数”。协程既可以用单线程实现，也可以用多线程实现：前者是一种特殊的子例程，后者是一种特殊的线程 。
 
@@ -46,9 +262,9 @@ Generator 函数是 ES6 对协程的实现，但属于不完全实现 。 Genera
 
 如果是完全实现的协程，任何函数都可以让暂停的协程继续执行。如果将 Generator 函数当作协程，完全可以将多个需要互相协作的任务写成 Generator 函数，它们之间使用 yield 语句交换控制权。
 
-## 三 异步管理
+## 四 异步管理
 
-### 3.1 实现异步同步化
+### 4.1 实现异步同步化
 
 Generator 函数的暂停执行效果，意味着可以把异步操作写在 y 工 eld 语句里面，等到调用 next 方法时再往后执行。这实际上等同于不需要写回调函数了，因为异步操作的后续操作可以放在 yield 语句下面，反正要等到调用 next 方法时再执行。所以， Generator 函数的一个重要实际意义就是用于处理异步操作，改写回调函数。
 
@@ -88,7 +304,7 @@ const it = main()
 it.next()
 ```
 
-### 3.2 异步控制流管理
+### 4.2 异步控制流管理
 
 如果有一个多步操作非常耗时，如果采用回调函数很容易形成回调地狱：
 
@@ -188,7 +404,7 @@ for (let step of iterateJobs(jobs)) {
 
 同样，上面的做法只能用于所有步骤都是同步操作的情况，不能有异步操作的情况。
 
-## 四 部署 Iterator 接口
+## 五 部署 Iterator 接口
 
 利用 Generator 函数可以在任意对象上部署 Iterator 接口：
 
@@ -206,7 +422,7 @@ for (let [key, value] of iterEntries(myObj)) {
 }
 ```
 
-上述代码中，町 Obj 是一个普通对象，通过 iterEntries 函数就有了 Iterator 接口。也就是说，可以在任意对象上部署 next 方法。
+上述代码中，Obj 是一个普通对象，通过 iterEntries 函数就有了 Iterator 接口。也就是说，可以在任意对象上部署 next 方法。
 
 下面是一个对数组部署 Iterator 接口的例子，尽管数组原生具有这个接口：
 
@@ -224,7 +440,7 @@ gen.next().value // ’ ya ’
 gen.next().done // true
 ```
 
-## 五 作为数组数据结构
+## 六 作为数组数据结构
 
 Generato r 可以看作 一个数组结构，因为 Ge nerator 函数可以返回一系列的值，这意味着它可以对任意表达式提供类似数组的接口 。
 
@@ -244,7 +460,7 @@ for (task of doStuff()) {
 }
 ```
 
-## 六 使用 `yield*` 实现递归算法
+## 七 使用 `yield*` 实现递归算法
 
 `yield*` 最有用的地方是实现递归操作，此时生成器可以产生自身：
 
