--- a/01-JavaScript基础语法/09.3-面向对象-ES6新增class关键字.md
+++ b/01-JavaScript基础语法/09.3-面向对象-ES6新增class关键字.md
@@ -4,7 +4,7 @@
 
 ### 1.1 class 类概念
 
-类是 Java 这种面向对象语言的核心概念，ES6 也提出了类，并使用关键字 `class` 来描述。
+类是 Java 这种面向对象语言的核心概念，ES6 使用关键字 `class` 也可以描述一个事物，但是其本质上并不是类！而是拥有着近似 类 的语法。
 
 我们可以简单的认为类就是创建对象的模板，默认情况下，类定义中的代码都在严格模式下执行，与函数构造函数一样，多数编程风格都建议类名的首字母要大写，以区别于通过它创建的实例：
 
