--- a/01-JavaScript基础语法/09.7-面向对象-三大特性-多态.md
+++ b/01-JavaScript基础语法/09.7-面向对象-三大特性-多态.md
@@ -10,7 +10,8 @@
 
 现在的问题是：鸟到底要以哪种具体的实际形态来发出声音呢？当然是鸟的真实类型，比如鸡发出 咯咯咯、鸭发出嘎嘎嘎。
 
-在面向对象中，对象往往有多种不同的具体表现形式，这种**父类引用指向子类对象**的概念叫做多态。
+在面向对象中，对象往往有多种不同的具体表现形式，这种**父类引用指向子类对象**的概念叫做多态，通俗的说就是父类的通用行为可以被子类用更特殊的行为重
+写。
 
 ## 二 多态的实现
 
