对象操作文档优化

--- a/01-JavaScript基础语法/09.2-面向对象-对象的创建方式.md
+++ b/01-JavaScript基础语法/09.2-面向对象-对象的创建方式.md
@@ -31,6 +31,8 @@ let obj = {
 }
 ```
 
+注意：**不推荐这种简写，因为这样写函数 run 本身没有标识符，变成了一个匿名函数表达式，会让一些自我引用（递归、事件绑定）等更难。**
+
 对于字面量的成员来说，可以设置 get、set 进行修饰：
 
 ```js
