--- a/01-JavaScript基础语法/09.3-面向对象-ES6新增class关键字.md
+++ b/01-JavaScript基础语法/09.3-面向对象-ES6新增class关键字.md
@@ -31,6 +31,8 @@ class Person {}
 console.log(typeof Person) // function
 ```
 
+class 关键字的出现更多的是避免 prototype 这种复杂语法，其内部提供的 super 关键字也是为了更好的避免实现继承时需要用到的 call 语句。
+
 ### 1.2 类与构造函数区别
 
 在 JavaScript 中，用 class 实现的类其实是语法糖，其本质仍然是构造函数与原型：
