--- a/01-JavaScript基础语法/09.6-面向对象-三大特性-继承.md
+++ b/01-JavaScript基础语法/09.6-面向对象-三大特性-继承.md
@@ -345,6 +345,8 @@ console.log(e instanceof Person) // true
 
 ### 5.2 super()
 
+可以通过 super(..) 来实现相对多态，这样任何方法都可以引用原型链上层的同名方法，避免了语法上之前实现继承时各种 call 的丑陋。
+
 在类构造函数中使用 super 可以调用父类构造函数。派生类的方法可以通过 super 关键字引用它们的原型。这个关键字只能在派生类中使用，而且仅限于类构造函数、实例方法和静态方法内部。
 
 注意：ES6 给类构造函数和静态方法添加了内部特性`[[HomeObject]]`，这个特性是一个指针，指向定义该方法的对象。这个指针是自动赋值的，而且只能在 JavaScript 引擎内部访问。super 始终会定义为`[[HomeObject]]`的原型。
