--- a/02-JavaScript语法进阶/06.1-异步编程-Promise对象操作.md
+++ b/02-JavaScript语法进阶/06.1-异步编程-Promise对象操作.md
@@ -76,6 +76,40 @@ ECMAScript 提出了三个解决方案：
 
 ## 二 期约 Promise 对象
 
+### 2.0 理解 Promise 对象
+
+Promise 对象用来应对异步任务无法得知最终数据的问题。好比在我们在饭店里，点了一份饭。这份饭什么时候做好是未知的，但是服务员会给我们一份点餐凭证，我们可以依据该凭证在菜做好后拿到之前点的菜。
+
+在等待做菜期间，我们可以去做其他的事情，比如聊天、刷手机等，尽管没有菜，但是在脑海里已经把手里的这个点餐凭单号作为菜的占位符了，这在本质上是一个未来的值。
+
+当服务员喊：某某号菜单完成，我们就可以依据手里的凭据去取得菜品了。也就是：一旦需要的值准备好了，就可以用这份承诺（Promise）换取到需要的值。
+
+回调函数的方式是在处理好业务后，拿到真实值去做一个事情：
+
+```js
+function(cb){
+  // 业务 doSomething，做完拿到最终结果  res
+  const res = ''
+
+  // 业务完成
+  cb(res)  // 执行回调
+}
+```
+
+而 Promise 其实是一种视觉上的包装：
+
+```js
+Promise(() => {
+  // 业务 doSomething，做完拿到最终结果  res
+  const res = ''
+
+  // 业务完成，通知完成
+  resole(res) // 业务失败则 reject()
+}).then((res) => {
+  // 拿到res
+})
+```
+
 ### 2.1 期约 Promise 基本概念
 
 Promise 是异步编程的一种解决方案，比起传统的回调函数，体验更好，功能强大。
