--- a/01-JavaScript基础语法/03.1-数据类型-数据类型的分类.md
+++ b/01-JavaScript基础语法/03.1-数据类型-数据类型的分类.md
@@ -54,16 +54,24 @@ console.log(typeof '12') // string
 console.log(typeof 12n) // bigint
 console.log(typeof false) // boolean
 console.log(typeof undefined) // undefined
-console.log(typeof null) // object   特殊情况：JS 认为 null 是一个空对象的引用
 console.log(typeof {}) // object
+console.log(typeof []) // object 数组也是对象
 ```
 
-注意：严格意义上来说，函数也是一种对象，并不是一种数据类型，但是函数拥有自己的属性，使用 typeof 可以区分，获得的结果为 `function`。此外，数组也是一种对象：
+注意：null 有时会被当做一种对象类型，但是这其实是语言本身的 bug，null 本身是基本类型：
+
+```js
+console.log(typeof null) // object   特殊情况：JS 认为 null 是一个空对象的引用
+```
+
+注意：严格意义上来说，函数是对象的一个子类型，并不是一种数据类型，而是一种可调用对象。但是函数拥有自己的属性，使用 typeof 可以区分，获得的结果为 `function`。
 
 ```js
 console.log(typeof function () {}) // function
-console.log(typeof []) // object
 ```
+
+> 不同的对象在底层都表示为二进制，在 JavaScript 中二进制前三位都为 0 的话会被判断为 object 类型
+> null 的二进制表示是全 0，自然前三位也是 0，所以执行 typeof 时会返回“object”
 
 ## 二 基本类型的基础使用
 
