添加笔者对面向委托章节看法

--- a/02-JavaScript语法进阶/03.10-对象操作-对象的委托.md
+++ b/02-JavaScript语法进阶/03.10-对象操作-对象的委托.md
@@ -1,4 +1,26 @@
-# 03.9-对象操作-对象的委托
+# 03.10-对象操作-对象的委托
+
+## 前言
+
+本章节内容主要摘自《你不知道的 JavaScript》上卷第 6 章行为委托。笔者在阅读完本节后熟悉了委托设计模式，但是笔者对原书作者的主张始终存在疑惑。原作者在这一章节对 class 提出很多质疑，并推荐了 `Object.create()` 方式来构建对象，笔者对这种观点有很大质疑！
+
+经过笔者查阅，知乎上的确对此有所讨论：《你不知道的 js》中倡导的编程风格？
+
+<https://www.zhihu.com/question/53506191>
+
+贺老师在问题中做了回答：
+
+> 固然直接用 Object.create() 创建对象是对基于原型构造对象的更直接的运用，但是你最后会发现你几乎总是需要某种构造函数来初始化对象上的实例属性，当你写多了
+> obj = Object.create(parentObject)
+> obj.init(...args)
+> 后，最后还是会包起来变成：
+> function createMyObject(...args) {
+> obj = Object.create(parentObject)
+> obj.init(...args)
+> }
+> 与其如此，不如使用 class / new 构造。从 spec 的层面看，class 确实更间接，但是不要把 spec 等同于你的实际编程模型。这么多年以来的实践证明，绝大多数时候你完全不用考虑原型机制。比如在你使用许多类库时，它跟其他语言里的 class 并没有什么差别。
+
+所以笔者抄录书上的这一节，只是为了记录面向委托设计的这种思想，大家可以了解到面向类设计与面向委托设计的区别，而非笔者有意推荐该编程风格。
 
 ## 一 面向委托设计
 
