--- a/01-JavaScript基础语法/03.1-数据类型-数据类型的分类.md
+++ b/01-JavaScript基础语法/03.1-数据类型-数据类型的分类.md
@@ -28,19 +28,16 @@
 
 JavaScript 包含 8 种数据类型（7 个基础类型，1 个复杂类型 Object）：
 
-**基本类型**：
-
-- Number 数字类型：js 中整数和实数共用一种数据类型
-- String 字符串类型：由双引号内的文本构成，当然单引号在 JS 中也可以用来表示字符串！
-- Boolean 布尔类型：包含两个值：true、false
-- Undefined 未定义类型：`var a = undefined;`表示该 a 的值未定义
-- Null 类型：null 较为特殊，是个空值，表示一个空对象的引用
-- Symbol 类型：ES6 中新增数据类型
-- Bigint 类型：新提案新增了 'bigint' 类型，表示更大范围的整数
-
-**引用类型**：
-
-- Object 对象类型：表示值为对象或者 null(非 function)
+- 基本类型：
+  - Number 数字类型：js 中整数和实数共用一种数据类型
+  - String 字符串类型：由双引号内的文本构成，当然单引号在 JS 中也可以用来表示字符串！
+  - Boolean 布尔类型：包含两个值：true、false
+  - Undefined 未定义类型：`var a = undefined;`表示该 a 的值未定义
+  - Null 类型：null 较为特殊，是个空值，表示一个空对象的引用
+  - Symbol 类型：ES6 中新增数据类型
+  - Bigint 类型：新提案新增了 'bigint' 类型，表示更大范围的整数
+- 引用类型：
+  - Object 对象类型：表示值为对象或者 null(非 function)
 
 基本类型和引用类型的数据类型的值分别对应了原始值（primitive value）和引用值（reference value），其中引用值是由多个值构成的对象。在执行赋值操作时，JS 引擎必须确定值是原始值还是引用值。因为：引用值是保存在内存中的对象，JS 不允许直接访问内存，在操作对象时，实际操作的是该对象的引用，而不是对象本身！
 
@@ -51,24 +48,19 @@ JavaScript 包含 8 种数据类型（7 个基础类型，1 个复杂类型 Obje
 ```js
 console.log(typeof 12) // number
 console.log(typeof '12') // string
-console.log(typeof 12n) // bigint
 console.log(typeof false) // boolean
 console.log(typeof undefined) // undefined
 console.log(typeof {}) // object
 console.log(typeof []) // object 数组也是对象
+console.log(typeof Symbol()) // symbol
+console.log(typeof 12n) // bigint
+console.log(typeof function () {}) // function（旧版浏览器会输出 object，新版改为了 function）
+console.log(typeof null) // object 输出结果不会返回null，这是bug
 ```
 
-注意：null 有时会被当做一种对象类型，但是这其实是语言本身的 bug，null 本身是基本类型：
-
-```js
-console.log(typeof null) // object   特殊情况：JS 认为 null 是一个空对象的引用
-```
+注意：null 的类型打印为 object，但是这其实是语言本身的 bug，typeof 输出的结果应该是：null。之所以没有修复该 bug，是因为修复后会给许多系统带去影响，所以该 bug 遗留至今。在 Java 等语言中，null 用来表示空对象，JavaScript 中的 null 是基本类型。
 
 注意：严格意义上来说，函数是对象的一个子类型，并不是一种数据类型，而是一种可调用对象。但是函数拥有自己的属性，使用 typeof 可以区分，获得的结果为 `function`。
-
-```js
-console.log(typeof function () {}) // function
-```
 
 > 不同的对象在底层都表示为二进制，在 JavaScript 中二进制前三位都为 0 的话会被判断为 object 类型
 > null 的二进制表示是全 0，自然前三位也是 0，所以执行 typeof 时会返回“object”
@@ -77,18 +69,11 @@ console.log(typeof function () {}) // function
 
 ### 2.1 Null 类型
 
-Null 类型只有一个值：`null`，用来表示一个空对象指针，所以在使用 typeof 判断其类型时返回 object。
+Null 类型只有一个值：`null`，是基本类型，表示空对象。在声名一个引用类型变量时，推荐使用 null 来初始化，这时候就可以判断该变量是否已经被赋予了引用：
 
 ```js
 let car = null
 console.log(typeof car) // object
-if (car != null) {
-}
-```
-
-在声名一个引用类型变量时，推荐使用 null 来初始化，这时候就可以判断该变量是否已经被赋予了引用：
-
-```js
 if (car != null) {
   // 此时 car 已经有引用了
 }
@@ -275,10 +260,6 @@ console.log(String(value4)) // "undefined"
 ### 2.7 Symbol 类型
 
 Symbol 类型是 ES6 新增数据类型，在 11 节中专门讲解。
-
-### 2.8 Object 类型
-
-Object 类型涉及面向对象知识，在面向对象章节中专门讲解。
 
 ## 三 引用类型
 
