--- a/01-JavaScript基础语法/03.2-数据类型-数据类型的转换.md
+++ b/01-JavaScript基础语法/03.2-数据类型-数据类型的转换.md
@@ -2,26 +2,7 @@
 
 ## 一 查看数据类型方式
 
-### 1.1 typeof
-
-使用 `typeof`关键字或者`typeof()`函数可以获得变量的数据类型：
-
-```js
-let num = 3
-let str = 'hello world!'
-let fn = function () {}
-let arr = [1, 3, 6, 7]
-console.log(typeof num) // number
-console.log(typeof str) // string
-console.log(typeof fn) // function（旧版浏览器会输出 object，新版改为了 function）
-console.log(typeof arr) // object
-```
-
-null 被认为是一个空对象的引用，所以`typeof null`也返回 object。
-
-Safari 5 及之前版本、Chrome 7 及之前版本在对正则表达式调用 typeof 操作符时会返回"function"，而其他浏览器在这种情况下会返回"object"。函数在 JavaScript 中被认为是一种特殊的对象，拥有自己的特殊属性，但并不是数据类型！
-
-### 1.2 instanceof
+使用 typeof 可以查看基本类型，object 类型。
 
 如果要知道数据类型的具体类型，如`typeof []`返回 object，其具体类型是数组，此时可以使用关键字`instanceof`：
 
