--- a/06-并发编程/05.1-JS的多线程-工作者线程概念.md
+++ b/06-并发编程/05.1-JS的多线程-工作者线程概念.md
@@ -4,19 +4,43 @@
 
 ### 1.1 工作者概念
 
-JavaScript 的业务代码在浏览器中是以单线程方式运行的，所以 JS 不可能像 Java 那样把工作委托给独立的线程去做，而且 JS 的 DOM API 也会因为多线程执行并发更改出现问题，所以 Java 这种线程模型也不适合 JavaSCript。
+JavaScript 的业务代码在浏览器中是以单线程方式运行的，所以 JS 不可能像 Java 那样把一些并发任务委托给独立的线程去做，而且 JS 的 DOM API 也会因为多线程执行并发更改出现问题，所以 Java 这种线程模型也不适合 JavaSCript。
 
 浏览器每打开一个页面，其实就会分配一个虚拟的运行环境，这个环境有自己的内存、事件循环、DOM 等。每个页面都是一个独立的沙盒，不会干扰其他页面，而且他们是并行执行的。
 
 新推出的工作者，可以让浏览器在原始页面环境之外再分配一个完全独立的二级子环境。**类似线程，这个子环境可以与父环境并行执行代码**，但是不能与依赖单线程交互的 API（如 DOM）进行互操作。
 
-### 1.2 工作者与传统线程比较
+### 1.2 工作者通信方式
+
+Worker 之间、与主程序之间，是不会共享任何作用域或资源的，因为这样会把多线程编程的噩梦带到前端领域，它们之间是通过一个基本的事件消息机制相互联系。
+
+message 事件给一个 woker w1：
+
+```js
+w1.postMessage('something cool to say')
+```
+
+w1 监听 message 事件：
+
+```js
+w1.addEventListener('message', function (evt) {
+  // evt.data
+})
+```
+
+通常由主页面应用程序创建 Worker，但若是需要的话，Worker 也可以实例化它自己的子 Worker，称为 subworker。有时候，把这样的细节委托给一个“主”Worker，由它来创建其他 Worker 处理部分任务。
+
+要在创建 Worker 的程序中终止 Worker，可以调用 Worker 对象上的 terminate()。突然终止 Worker 线程不会给它任何机会完成它的工作或者清理任何资源，这就类似于通过关闭浏览器标签页来关闭页面。
+
+注意：如果浏览器中有两个或多个页面（或同一页上的多个 tab ！）试图从同一个文件 URL 创建 Worker，那么最终得到的实际上是完全独立的 Worker。
+
+### 1.3 工作者与传统线程比较
 
 工作者与传统执行线程有很多相似的地方：
 
 - 创建线程的底层核心类似：工作者也是由传统的线程实现的。
 - 都能够在父环境中并行执行代码
-- 都可以共享一些内存：工作者线程能够使用 SharedArrayBuffer 在多个环境间共享内容。
+- 都可以共享一些内存：工作者线程能够使用 SharedArrayBuffer 在多个环境间共享内容
 
 工作者与传统执行线程的区别：
 
@@ -25,9 +49,11 @@ JavaScript 的业务代码在浏览器中是以单线程方式运行的，所以
 - 并发控制不同：传统线程采用锁进行并发控制，JS 采用 Atomics 接口实现并发控制。
 - 工作者不共享所有内存：在传统线程模型中，多线程有能力读写共享内存空间。除了 SharedArrayBuffer 外，从工作者线程进出的数据需要复制或转移。
 
+在 Worker 内部是无法访问主程序的任何资源的。这意味着你不能访问它的任何全局变量，也不能访问页面的 DOM 或者其他资源。记住，这是一个完全独立的线程。
+
 综合以上发现，工作者线程相对比较重，不是用于替代线程而出现的。工作者线程应该是长期运行的，启动成本比较高，每个实例占用内存也比较大。
 
-### 1.3 工作者分类
+### 1.4 工作者分类
 
 Web 规范定义了多种工作者，主要有三种：
 
@@ -35,7 +61,7 @@ Web 规范定义了多种工作者，主要有三种：
 - 共享工作者：与专用工作者线程相似，但共享工作者线程可以被多个不同的上下文使用，包括不同的页面。任何与创建共享工作者线程的脚本同源的脚本，都可以向共享工作者线程发送消息或从中接收消息。
 - 服务工作者：与上述二者不同，用于拦截、重定向和修改页面发出的请求，充当网络请求的仲裁者的角色。
 
-### 1.4 WorkerGlobalScope
+### 1.5 WorkerGlobalScope
 
 工作者环境是没有 window 对象的，其全局对象是 WorkerGlobalScope 的实例，通过 self 关键字获取。
 
@@ -72,3 +98,21 @@ importScripts() // 工作者线程专用
 - 专用工作者线程使用 DedicatedWorkerGlobalScope
 - 共享工作者线程使用 SharedWorkerGlobalScope
 - 服务工作者线程使用 ServiceWorkerGlobalScope
+
+## 二 工作应用领域
+
+- 处理密集型数学计算
+- 大数据集排序
+- 数据处理（压缩、音频分析、图像处理等）
+- 高流量网络通信
+
+## 三 数据传输问题
+
+在线程之间通过事件机制传递大量的信息，可能是双向的。
+
+在早期的 Worker 中，唯一的选择就是把所有数据序列化到一个字符串值中。除了双向序列化导致的速度损失之外，另一个主要的负面因素是数据需要被复制，这意味着两倍的内存使用（及其引起的垃圾收集方面的波动）。
+
+如果要传递一个对象，可以使用结构化克隆算法（structured clone algorithm）（<https://developer.mozilla.org/en-US/docs/Web/Guide/API/DOM/The_structured_clone_algorithm>）把这个对象复制到另一边。这个算法非常高级，甚至可以处理要复制的对象有循环引用的情况。这样就不用付出 to-string 和 from-string 的性能损失了，但是这种方案还是要使用双倍的内存。IE10 及更高版本以及所有其他主流浏览器都支持这种方案。
+
+还有一个更好的选择，特别是对于大数据集而言，就是使用 Transferable 对象（<http://updates.html5rocks.com/2011/12/Transferable-Objects-Lightning-Fast>）。这时发生的是对象所有权的转移，数据本身并没有移动。一旦你把对象传递到一个 Worker 中，在原来的位置
+上，它就变为空的或者是不可访问的，这样就消除了多线程编程作用域共享带来的混乱。当然，所有权传递是可以双向进行的。
