新增ts类型系统设计文章

--- a/08-TypeScript/02.1-数据类型.md
+++ b/08-TypeScript/02.1-数据类型.md
@@ -4,7 +4,7 @@
 
 TypeScript 沿用了 ECMAScript 标准，类型有：
 
-基础类型：number、boolean、string、undefined、null、symbol
+基础类型：number、boolean、string、undefined、null、symbol、bigint
 引用类型：object（包括 function、array）
 
 此外 TS 还额外支持一些自己独有的类型：
@@ -18,23 +18,11 @@ TypeScript 沿用了 ECMAScript 标准，类型有：
 
 ![ts数据类型](../images/typescript/01.svg)
 
-贴士：bigint 是 JavaScript 新引入的类型，能表示的数很大，而且在处理较大整数时，不会丢失精度，声明如：
-
-```js
-let a = 1234n //bigint
-let b = 100 + a
-
-let c = 88.5n // Error：必须是整数
-
-// 在TS中使用bigint类型
-let d:bigint = 100n
-```
-
 ## 二 TypeScript 常见的独有数据类型
 
 ### 2.1 any
 
-any 是一切类型的祖先，如果无法确认数据的类型在，则默认为 any，是兜底的行为，需要尽量避免使用。因为 any 会让该变量的类型检查器无法发挥作用。
+any 是一切类型的祖先，如果无法确认数据的类型在，则默认为 any。any 是兜底的行为，需要尽量避免使用，因为 any 会让该变量的类型检查器无法发挥作用。
 
 贴士：any 的滥用导致的编译器无法报错示例：
 
