--- a/08-TypeScript/03.1-函数.md
+++ b/08-TypeScript/03.1-函数.md
@@ -101,7 +101,20 @@ let total = add({ num1: 1, num2: 2 })
 
 ## 三 函数重载
 
-ts 中的函数重载与 Java 中的重载不太一样。在 TS 中，名称相同的函数，但是参数或者返回值不同的函数，他们共用一个函数体，则称为函数重载：
+函数重载一般指：函数名相同，但是函数参数或者返回值不同的一类函数。
+
+ts 中的函数重载与 Java 中的重载不太一样，以下的代码在 Java 的环境中会被视为重载的函数，而在 TS 中不支持这样的静态重载：
+
+```ts
+function add(a: number, b: number): number {
+  return a + b
+}
+function add(a: string, b: string): string {
+  return a + b + '!'
+}
+```
+
+在 TS 中，只支持函数签名并共用一个函数体的方式实现重载：
 
 ```ts
 function getInfo(name: string): string
