--- a/08-TypeScript/04.1-面向对象.md
+++ b/08-TypeScript/04.1-面向对象.md
@@ -168,3 +168,29 @@ class Fish extends Animal {
   }
 }
 ```
+
+## 五 结构化类型
+
+TS 通过结构化类型（Structual Typing）来实现类型推断，如下所示：vector3D 不是 vector2D 的子类但是依然不会报错：
+
+```ts
+class vector2D {
+  constructor(public x: number, public y: number) {
+    this.x = x
+    this.y = y
+  }
+}
+class vector3D {
+  constructor(public x: number, public y: number, public z: number) {
+    this.x = x
+    this.y = y
+    this.z = z
+  }
+}
+
+function calculateLength(v: vector2D) {
+  return Math.sqrt(v.x * v.x + v.y * v.y)
+}
+const point = new vector3D(0, 1, 2)
+const dist = calculateLength(point)
+```
