--- a/08-TypeScript/05.1-接口.md
+++ b/08-TypeScript/05.1-接口.md
@@ -174,9 +174,13 @@ interface Person extends Animal {
 
 ## 五 接口与类型别名
 
-第一：类型别名的通用性更强，因为接口的限制内容必须是结构性的，而类型别名可以是表达式。
+大多数情况下，接口和类型别名都是可以等价转换的。但是他们也有一些区别：
 
-第二：扩展接口时，TS 会对可扩展性进行检查，而交集类型不会。如下所示：
+- 类型别名的通用性更强，因为接口的限制内容必须是结构性的，而类型别名可以是表达式
+- 同一个作用域中，同名接口将自动合并，而同名类型别名则报错
+- 扩展接口时，TS 会对可扩展性进行检查，而交集类型不会
+
+inteface 无法应用于 union type | intersection type | conditional type | tuple：
 
 ```ts
 interface A {
@@ -191,6 +195,8 @@ interface B extends A {
 }
 ```
 
-这里继承改为类型别名方式，并使用交集 & 则不会产生该错误。
+这里继承改为类型别名方式，并使用交集 & 则不会产生该错误：
 
-第三：同一个作用域中，同名接口将自动合并，而同名类型别名则报错。
+```ts
+type NamedVariable = (Input | Output) & { name: string } // 这种方式不会报错
+```
