--- a/08-TypeScript/01.1-TypeScript简介.md
+++ b/08-TypeScript/01.1-TypeScript简介.md
@@ -120,92 +120,9 @@ function fn(p) {
 fn({ x: 1, y: 2 })
 ```
 
-## 三 理解 TypeScript 的类型检查
+## 三 TS 的配置
 
-### 3.1 编译器
-
-编译器可以将代码文本转换成抽象语法树（abstract syntax tree，即 AST），AST 的本质是去除了空白、注释、缩进等制表符后的数据结构，AST 最终会被编译器转换为字节码（bytecode）底层程序，交给计算机执行。那么大多数编程语言整体执行过程，以 JS 为例为：
-
-- 1、将 JavaScript 程序解析为 JavaScript AST
-- 2、把 JavaScript AST 编译为字节码
-- 3、运行时计算字节码
-
-TypeScript 其他编程语言不同的是，其不直接生成字节码，而是编译成了 JavaScript 代码，接着再在浏览器或者 Node 等运行时中运行 JS 代码！TS 对代码安全性的保证就在 TS 编译器生成 AST 后，真正运行代码之前，会对代码做类型检查。所以，TS 编译器的解析步骤为：
-
-- 1、将 TypeScript 程序解析为 TypeScript AST
-- 2、类型检查器检查 TypeScript AST
-- 3、把 TypeScript AST 编译为 JavaScript 源码
-- 4、把 JavaScript AST 编译为字节码
-- 5、运行时计算字节码
-
-上述步骤中，1-3 步为 TSC 编译器执行，4-5 步为浏览器/Node 执行。这意味着程序中的类型类型只在类型检查这一步起到作用，对程序输出没有任何影响，这是 TS 与传统编译型语言最大的不同，也是其巧妙之处。（ Node 之父创建的 Deno 能直接运行 TS 是另外一个故事了）
-
-### 3.2 类型系统设计
-
-在 TS 编译代码运行步骤中的第 2 步，使用的类型检查器其实是一套程序分配类型的规则。一般有两种类型系统：
-
-- 显式设置类型（type annotation，类型注解）：如 Java 需要显式设置几乎所有类型！
-- 自动推导类型（type interface， 类型推断）：如 JS、Python 等在运行时推导类型，Haskell 在编译时推导检查类型
-
-这两种方式都各有利弊，TS 都支持了，这样在开发者这里就可以依据需求设计类型。而且 TS 是渐进式类型语言，在编译前不需要知道全部类型，即便是没有类型的程序，TS 也能推导出一部分类型，捕获部分错误。
-
-示例：
-
-```ts
-// 类型注解
-const count: number
-// 声明时也可以直接赋值
-let age: number = 30
-
-// 类型推断：声明变量之后，再使用时，鼠标移入 num 查看，会显示为 number 类型
-let num = 123
-```
-
-贴士：在实际开发中，如果一个变量拥有了固定的值，推荐让 TS 自动推导，无需手动设置其变量类型。
-
-变量的类型乍一看有点鸡肋，其作用其实很大程度上体现在函数中，比如如下函数，如果参数没有类型，函数内部的运算就会有隐藏问题，如 undefined 等，且其在一连串的函数调用时会引起连锁错误。一般情况下，我们需要对函数的参数进行类型注解，返回值则可以直接推断出来：
-
-```ts
-function total(num1: number, num2: number) {
-  return num1 + num2
-}
-
-// res 的值类型可以推断出来
-let res = total(1, 2)
-```
-
-不过要注意 typescript 对类型的严格限定：
-
-```ts
-let num1: number
-console.log(num1) //声明没有赋值报错
-
-let num2: undefined
-console.log(num2) //undefined 类型直接输出不会报错
-
-let num3: number | undefined
-console.log(num3) //不会报错
-
-let num: null
-num = null //正确
-num = 123 //报错，定义一个变量为 null 时，变量的值只能是 null
-```
-
-在隐式转换方面，TS 能发现无效操作，并在**运行代码前就会及时报错**，如：
-
-```txt
-// 报错
-const a = 3 + [1]
-
-// 正确输出31，因为意图清晰，可以推导
-(3).toStiring +[1].toString()
-```
-
-而 JS 在运行上述代码则会导致难以追踪的错误！
-
-## 四 TS 的配置
-
-### 4.1 配置文件 tsconfig.json
+### 3.1 配置文件 tsconfig.json
 
 使用 TS 开发的项目，其根目录都需要 ts 的配置文件：`tsconfig.json`。使用如下命令即可创建：
 
@@ -247,7 +164,7 @@ package.json 中配置运行脚本：
 
 nodemon 是自动重启的 node 包，concurrently 是并行执行程序的包，需要开发者自行安装。
 
-### 4.2 ts-node
+### 3.2 ts-node
 
 `ts-node` 模块可以帮助用户直接运行 ts：
 
@@ -257,42 +174,4 @@ npm i -g ts-node
 
 # 运行
 ts-node hello.ts
-```
-
-### 4.3 使用 webpack 处理 typescript
-
-如果项目中用到 webpack，则推荐使用官方的 loader：
-
-```txt
-npm i -D ts-loader
-```
-
-tsconfig.json 配置：
-
-```js
-{
-    "compilerOptions": {
-        "module": "commonjs",
-        "target": "es5",
-        "allowJs": true
-    },
-    "include": [
-        "./src/*"
-    ],
-    "exclude": [
-        "./node_module"
-    ]
-}
-
-```
-
-webpack 配置：
-
-```js
-{
-  test: /\.tsx?$/,
-  use: {
-    loader: 'ts-loader'
-  }
-}
 ```
