--- a/附录-HTML与CSS/02.4-CSS基础-背景与颜色.md
+++ b/附录-HTML与CSS/02.4-CSS基础-背景与颜色.md
@@ -140,6 +140,10 @@ contain 会自动调整缩放比例，保证图片始终完整显示在背景区
 background-clip: padding-box;
 ```
 
+### 1.8 outline
+
+outline（描边）属性可以在边框外层继续产生一层描边，可以通过 outline-offset 属性来控制它跟元素边缘之间的间距，这个属性甚至可以接受负值。
+
 ## 二 背景的应用示例
 
 多背景：
