--- a/附录-设计模式/01.1-单例模式.md
+++ b/附录-设计模式/01.1-单例模式.md
@@ -9,13 +9,13 @@
 
 ## 二 单例模式的实现
 
-### 2.1 简单实现
+### 2.1 懒汉式
+
+> 懒汉式：使用单例的时候，才会去对对象进行初始化
 
 ```js
 class Singleton {
-  constructor() {
-    this.instance = null
-  }
+  instance = null
   static getInstance() {
     if (!this.instance) {
       this.instance = new Singleton()
@@ -27,6 +27,72 @@ class Singleton {
 const s1 = Singleton.getInstance()
 const s2 = Singleton.getInstance()
 
-// true
-console.log(s1 === s2)
+console.log(s1 === s2) // true
 ```
+
+在使用单例的时候，才会去对 instance 对象进行 new 或者返回处理，这是一种懒汉式，即：惰性单例。
+
+惰性单例在 web 中的应用举例：界面中只需要一个弹窗对象，只有点击按钮的时候弹窗。
+
+### 2.2 代理模式实现惰性单例
+
+使用类上的静态方法来获取一个实例会感觉比较别扭，可以使用代理方式实现。
+
+在下面的例子中，我们将使用 CreateDiv 单例类，它的作用是负责在页面中创建唯一的 div 节点：
+
+```js
+class Singleton {
+  constructor(html) {
+    this.html = html
+    this.init()
+  }
+  init() {
+    const div = document.createElement('div')
+    div.innerHTML = this.html
+    document.body.appendChild(div)
+  }
+}
+
+const ProxySingletonCreateDiv = (function () {
+  let instance
+  return function (html) {
+    if (!instance) {
+      instance = new Singleton(html)
+    }
+    return instance
+  }
+})()
+
+const s1 = new ProxySingletonCreateDiv('zs')
+const s2 = new ProxySingletonCreateDiv('ls')
+
+console.log(s1 === s2) // true
+```
+
+### 2.3 JavaScript 中的单例模式
+
+2.1 和 2.2 章节中的单例都是面向对象语言的用法，而 JS 没有类的概念，所以 JS 其实直接创建一个全局对象也可以视为单例：
+
+```js
+const o = { name: 'zs', age: 30 }
+```
+
+### 2.4 饿汉式
+
+> 饿汉式：在应用加载时就完成了实例
+
+```js
+class Singleton {
+  static instance = new Singleton()
+  static getInstance() {
+    return Singleton.instance
+  }
+}
+
+const s1 = Singleton.getInstance()
+const s2 = Singleton.getInstance()
+
+console.log(s1 === s2) // true
+```
+
+饿汉式写法简单，在应用加载完成时实现了实例化，在 Java 中可以避免线程同步问题。但如果一直未使用该单例会造成内存浪费。
