新增设计模式章节

--- a/附录-设计模式/01.1-单例模式.md
+++ b/附录-设计模式/01.1-单例模式.md
@@ -7,7 +7,7 @@
 有一些对象我们往往只需要一个，比如线程池、全局缓存、浏览器中的 window 对象等。在 JavaScript 开发中，单例模式的用途同样非常广泛。比如：当我
 们单击登录按钮的时候，页面中会出现一个登录浮窗，而这个登录浮窗是唯一的，无论单击多少次登录按钮，这个浮窗都只会被创建一次，那么这个登录浮窗就适合用单例模式来创建。
 
-## 二 单例模式的实现
+## 二 单例模式实现
 
 ### 2.1 懒汉式
 
@@ -31,8 +31,6 @@ console.log(s1 === s2) // true
 ```
 
 在使用单例的时候，才会去对 instance 对象进行 new 或者返回处理，这是一种懒汉式，即：惰性单例。
-
-惰性单例在 web 中的应用举例：界面中只需要一个弹窗对象，只有点击按钮的时候弹窗。
 
 ### 2.2 代理模式实现惰性单例
 
@@ -96,3 +94,7 @@ console.log(s1 === s2) // true
 ```
 
 饿汉式写法简单，在应用加载完成时实现了实例化，在 Java 中可以避免线程同步问题。但如果一直未使用该单例会造成内存浪费。
+
+## 三 单例模式应用
+
+比如：惰性单例在 web 中的应用举例：界面中只需要一个弹窗对象，只有点击按钮的时候弹窗。
